--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,5 @@ jobs:
             - name: Run tests
               run: python manage.py test
             - name: Run bisect
+              if: failure()
               run: python myscript.py
